--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -248,4 +248,6 @@ body {
 @import './screens/countdown';
 @import './screens/game';
 @import './screens/round-end';
+@import './screens/last-word-steal';
+@import './screens/dispute';
 @import './screens/game-end';
